improvements to modal scrolling issue on mobile

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,6 +1,15 @@
 @import "~animate.css";
 @import "../../styles/variables";
 
+:global {
+    .no-scroll {
+        height: 100%;
+        overflow: hidden;
+        width: 100%;
+        position: fixed;
+    }
+}
+
 .app {
     display: flex;
     -webkit-font-smoothing: antialiased;
